--- a/web/week02/team/index.html
+++ b/web/week02/team/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CS 313 Website</title>
+        <title>CS 313 Website - Week 02</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="" src="script.js"></script>
         <link rel="stylesheet" href="style.css">
