adding assignments page and styling landing page

--- a/web/landing.html
+++ b/web/landing.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CS 313 Website - Landing</title>        
+        <title>CS 313 Website - Landing</title>
+        <link rel="stylesheet" href="style.css">       
     </head>
     <body>
-        <div>
-            <span>
-                Below is a list of all of my assignments throughout the semester!
-            </span>
+        <div class="nav-toolbar font-18">
+            <a href="landing.html" class="nav-toolbar-item">Home</a>
+            <a href="assignments.html" class="nav-toolbar-item">Assignments</a>
         </div>
-        <br><br><br><br>
-        <a href="week02/team/index.html">Week 02 Team Activity</a>
+        
     </body>
 </html>
