--- a/web/week02/team/index.html
+++ b/web/week02/team/index.html
@@ -8,10 +8,22 @@
     </head>
     <body>
         <div class="grid-container">
-            <div class="house-div back-red">You might belong in Gryffindor, where dwell the brave at heart, their daring, nerve, and chivalry set Gryffindors apart.</div>
-            <div class="house-div back-green">Or perhaps in Slytherin you'll make your real friends, those cunning folk use any means to achieve their ends.</div>
-            <div class="house-div back-yellow">You might belong in Hufflepuff, where they are just and loyal, those patient Hufflepuffs are true and unafraid of toil.</div>
-            <div class="house-div back-blue">Or yet in wise old Ravenclaw, if you've a ready mind, where those of wite and learning will always find their kind.</div>
+            <div class="house-div back-red">
+                You might belong in Gryffindor, where dwell the brave at 
+                heart, their daring, nerve, and chivalry set Gryffindors apart.
+            </div>
+            <div class="house-div back-green">
+                Or perhaps in Slytherin you'll make your real friends, those 
+                cunning folk use any means to achieve their ends.
+            </div>
+            <div class="house-div back-yellow">
+                You might belong in Hufflepuff, where they are just and loyal, 
+                those patient Hufflepuffs are true and unafraid of toil.
+            </div>
+            <div class="house-div back-blue">
+                Or yet in wise old Ravenclaw, if you've a ready mind, where 
+                those of wite and learning will always find their kind.
+            </div>
         </div>
         <div class="color-changer-container">
             <div id="jsColorChanger" class="color-changer">
