--- a/web/assignments.html
+++ b/web/assignments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CS 313 Website - Assignments</title> 
+        <title>CS 313 - Assignments</title> 
         <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
@@ -9,6 +9,7 @@
             <a id="link1" href="landing.html" class="nav-toolbar-item">Home</a>
             <a id="link1" href="assignments.html" class="nav-toolbar-item">Assignments</a>
         </div>
+        <img id="collegeMotto" src="images/arbeit.JPG" class="image">
         <table id="assignmentsTable">
             <tr class="font-18">
                 <th>Weeks</th>
