added team 3 and started assignment 3

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -31,11 +31,11 @@
             <tr>
                 <td class="font-18">Week 02</td>
                 <td><a href="week02/team/index.html">Week 02 Team</a></td>
-                <td>Coming Soon...</td>
+                <td>You're looking at it.</td>
             </tr>
             <tr>
                 <td class="font-18">Week 03</td>
-                <td>Coming Soon...</td>
+                <td><a href="week03/team/index.php">Week 03 Team</a></td>
                 <td>Coming Soon...</td>
             </tr>
         </table>
