--- a/web/assignments.html
+++ b/web/assignments.html
@@ -36,7 +36,7 @@
             <tr>
                 <td class="font-18">Week 03</td>
                 <td><a href="week03/team/index.php">Week 03 Team</a></td>
-                <td>Coming Soon...</td>
+                <td><a href="week03/personal/raspberry-pi.php">Raspberry Pi</a></td>
             </tr>
         </table>
     </body>
