added landing page for week04 team assignment

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -38,6 +38,11 @@
                 <td><a href="week03/team/index.php">Week 03 Team</a></td>
                 <td><a href="week03/personal/raspberry-pi.php">Raspberry Pi</a></td>
             </tr>
+            <tr>
+                <td class="font-18">Week 04</td>
+                <td><a href="week04/team/database.html">Database Setup</a></td>
+                <td>Coming soon...</td>
+            </tr>
         </table>
     </body>
 </html>
