added week 04 personal assignment - database

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -41,7 +41,7 @@
             <tr>
                 <td class="font-18">Week 04</td>
                 <td><a href="week04/team/database.html">Database Setup</a></td>
-                <td>Coming soon...</td>
+                <td><a href="week04/personal/website-db.html">Database Test</a></td>
             </tr>
         </table>
     </body>
