--- a/web/landing.html
+++ b/web/landing.html
@@ -16,6 +16,7 @@
         <div class="nav-toolbar font-18">
             <a href="landing.html" class="nav-toolbar-item">Home</a>
             <a href="assignments.html" class="nav-toolbar-item">Assignments</a>
+            <a href="website/website.html" class="nav-toolbar-item">Infinite Springs</a>
             <div id="clickButtonContainer" class="nav-toolbar-item">
                 <button onclick="addClick()">Click me!</button>
                 Total clicks: <span id="clickNum"></span>
