adding logo and working on login database connection

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -43,6 +43,11 @@
                 <td><a href="week04/team/database.html">Database Setup</a></td>
                 <td><a href="week04/personal/website-db.html">Database Test</a></td>
             </tr>
+            <tr>
+                <td class="font-18">Week 05</td>
+                <td>Coming soon...</td>
+                <td>Coming soon...</td>
+            </tr>
         </table>
     </body>
 </html>
