added row to database and testing output of query

--- a/web/website/login.html
+++ b/web/website/login.html
@@ -38,6 +38,18 @@
                 <input type="submit" value="Log In">
             </form>
         </div>
+        <table id="resultTable">
+            <tr>
+                <th>user_id</th>
+                <th>username</th>
+                <th>date_created</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>testing</td>
+                <td>now :)</td>
+            </tr>
+        </table>
         <footer></footer>
     </body>
 </html>
