finalizing login test output

--- a/web/website/login.html
+++ b/web/website/login.html
@@ -32,6 +32,8 @@
             </div>
         </header>
         <div id="loginInfoContainer">
+            <div>No credentials are actually needed here. Any input can be entered for now.</div>
+            <br>
             <form method="post" action="login.php">
                 <input type="text" name="username" value="" placeholder="Username">
                 <input type="text" name="password" value="" placeholder="Password">
