added week 05 team activity and working on database queries

--- a/web/assignments.html
+++ b/web/assignments.html
@@ -45,7 +45,7 @@
             </tr>
             <tr>
                 <td class="font-18">Week 05</td>
-                <td>Coming soon...</td>
+                <td><a href="week05/team/index.php">Database Queries</a></td>
                 <td>Coming soon...</td>
             </tr>
         </table>
