--- a/web/website/login.html
+++ b/web/website/login.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Infinite Springs</title>
+        <title>Login - Infinite Springs</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="style.css"> 
         <link rel="stylesheet" href="login-styles.css">
         <script type="text/javascript" src="mtg-endpoints.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
-        <script type="text/javascript">
-        
-        </script>
     </head>
     <body>
         <header>
             <div class="header-contents">
                 <div class="header-left-container">
-                    <div class="header-image">
-                        <img src="images/spring.JPG">
-                    </div>
-                    <div class="header-text">
-                        <span>Infinite Springs</span>
-                    </div>
+                    <a href="website.html">
+                        <div class="header-image">
+                            <img src="images/spring.JPG">
+                        </div>
+                        <div class="header-text">
+                            <span>Infinite Springs</span>
+                        </div>
+                    </a>
                 </div>
                 <div class="nav-bar-container">
                     <ul>
                         <li><a href="login.html">Login</a></li>
-                        <li><a href="cards.php">Saved Cards</a></li>
+                        <li><a href="saved-cards.php">Saved Cards</a></li>
                         <li><a href="decks.php">Decks</a></li>
                     </ul>
                 </div>
