--- a/web/assignments.html
+++ b/web/assignments.html
@@ -16,6 +16,7 @@
         <div class="nav-toolbar font-18">
             <a href="landing.html" class="nav-toolbar-item">Home</a>
             <a href="assignments.html" class="nav-toolbar-item">Assignments</a>
+            <a href="website/website.html" class="nav-toolbar-item">Infinite Springs</a>
             <div id="clickButtonContainer" class="nav-toolbar-item">
                 <button onclick="addClick()">Click me!</button>
                 Total clicks: <span id="clickNum"></span>
@@ -46,7 +47,7 @@
             <tr>
                 <td class="font-18">Week 05</td>
                 <td><a href="week05/team/index.php">Database Queries</a></td>
-                <td>Coming soon...</td>
+                <td>Click "Infinite Springs" above and navigate the buttons.</td>
             </tr>
         </table>
     </body>
