updated file paths

--- a/web/website/header.html
+++ b/web/website/header.html
@@ -1,8 +1,8 @@
 <div class="header-contents">
     <div class="logo-container">
-        <a href="/cs313-php/web/website/website.html">
+        <a href="/website/website.html">
             <div class="header-image">
-                <img src="/cs313-php/web/website/images/spring.JPG">
+                <img src="/website/images/spring.JPG">
             </div>
             <div class="header-text">
                 <span>Infinite Springs</span>
@@ -10,16 +10,16 @@
         </a>
     </div>
     <!-- <div class="search-container">
-        <form action="/cs313-php/web/website/search/search.php" method="post">
+        <form action="/website/search/search.php" method="post">
             <input id="cardSearch" type="text" name="search" placeholder="Search cards...">
             <input id="searchSubmit" type="submit">
         </form>
     </div> -->
     <div class="nav-bar-container">
         <ul>
-            <li><a href="/cs313-php/web/website/login/login.php">Login</a></li>
-            <li><a href="/cs313-php/web/website/saved-cards/saved-cards.php">Cards</a></li>
-            <li><a href="/cs313-php/web/website/decks/decks.php">Decks</a></li>
+            <li><a href="/website/login/login.php">Login</a></li>
+            <li><a href="/website/saved-cards/saved-cards.php">Cards</a></li>
+            <li><a href="/website/decks/decks.php">Decks</a></li>
         </ul>
     </div>
 </div>
