--- a/web/website/header.html
+++ b/web/website/header.html
@@ -9,15 +9,15 @@
             </div>
         </a>
     </div>
-    <!-- <div class="search-container">
+    <div class="search-container">
         <form action="/website/search/search.php" method="post">
             <input id="cardSearch" type="text" name="search" placeholder="Search cards...">
             <input id="searchSubmit" type="submit">
         </form>
-    </div> -->
+    </div>
     <div class="nav-bar-container">
         <ul>
-            <li><a href="/website/login/login.php">Login</a></li>
+            <li id="btnLogin"><a href="/website/login/login.php">Login</a></li>
             <li><a href="/website/saved-cards/saved-cards.php">Cards</a></li>
             <li><a href="/website/decks/decks.php">Decks</a></li>
         </ul>
